--- a/css-imtranur/index.html
+++ b/css-imtranur/index.html
@@ -2,7 +2,7 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <title>Imtranur Rahman</title>
+    <title>Michael H. Spence</title>
     <link rel="stylesheet" href="css/styles.css">
     <link rel="shortcut icon" href="favicon.ico">
     <link href="https://fonts.googleapis.com/css2?family=Merriweather+Sans&family=Montserrat&family=Sacramento&display=swap" rel="stylesheet">
@@ -10,7 +10,7 @@
   <body>
      <div class="top-container">
        <img class="top-cloud" src="images/cloud.png" alt="cloud-img">
-       <h1>I'm Rahman.</h1>
+       <h1>I'm Michael.</h1>
        <h2>a <span class="pro">pro</span>grammer</h2>
        <img class="bottom-cloud" src="images/cloud.png" alt="cloud-img">
        <img src="images/mountain.png" alt="mount-img">
@@ -18,9 +18,9 @@
 
      <div class="middle-container">
        <div class="profile">
-         <img src="images/mike.png" alt="Imtranur Rahman">
+         <img src="images/mike.png" alt="Michael Spence">
          <h2>Hello.</h2>
-         <p class="intro">I am Senior Solutions Architect at AWS <a href="https://mycloudyworld.spikebiz.com">SpikeBiz, Inc.</a>I'm focused on helping partners within Amazon Web Services (AWS) to build their cloud strategy and help them with broad use of Amazon's cloud computing platform.I enjoy working on microservices based applications, hybrid application solutions, application modernization and innovating on behalf of my customers and Partners. Outside of work, he loves playing cricket and soccer.</p>
+         <p class="intro">I am the founder and CEO of <a href="https://mycloudyworld.spikebiz.com">SpikeBiz, Inc.</a>I am an avid music lover.  I love beer 🍺 and bourbon 🥃</p>
        </div>
        <hr>
        <div class="skills">
