--- a/index.bkp.html
+++ b/index.bkp.html
@@ -4,7 +4,7 @@
 </head>
 <body style="background-color: cornflowerblue;">
 <h1 style="color: white; text-align: center;">
-    Demo application for re:Invent 2022 - hosted on EKS
+    Demo application for re:invent 2022 - hosted on EKS
 </h1>
 <td valign="bottom">
  <div id="footer">Version 2.0</div>
