Added CSS and Images in Dockerfile

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
      <div class="middle-container">
        <div class="profile">
-         <img src="LinkedIn-Profile.jpeg" alt="Imtranur Rahman">
+         <img src="images/rahman.jpeg" alt="Imtranur Rahman">
          <h2>Hello.</h2>
          <p class="intro">I am Senior Solutions Architect at AWS <a href="https://mycloudyworld.spikebiz.com">SpikeBiz, Inc.</a>I'm focused on helping partners within Amazon Web Services (AWS) to build their cloud strategy and help them with broad use of Amazon's cloud computing platform.I enjoy working on microservices based applications, hybrid application solutions, application modernization and innovating on behalf of my customers and Partners. Outside of work, he loves playing cricket and soccer.</p>
        </div>
