Added Linkedin URL

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
          </div>
          <div class="skill-row">
            <img class="skill-img2" src="images/tech-support.gif" alt="">
-           <h3>Outdated Tech Support</h3>
+           <h3>Zero Downtime Deployment</h3>
            <p>Lorem ipsum dolor sit amet, mauris sed consectetuer. Etiam et eu, bibendum interdum, lacus quis mauris. Curabitur wisi, quisque vel eu, rutrum nam.</p>
          </div>
        </div>
@@ -41,16 +41,16 @@
          <h2>Get In Touch</h2>
          <h3>If you love all things cloudy</h3>
          <p class="contact-message">Trying to understand cloud computing?  Let's talk about the wonderful things you can do with the cloud over a nice pint!</p>
-         <a class="btn" href="mailto:mike@spikebiz.com">CONTACT ME</a>
+         <a class="btn" href="mailto:imtranur@amazon.com">CONTACT ME</a>
        </div>
      </div>
 
 
      <div class="bottom-container">
-       <a class="footer-link" href="https://www.linkedin.com/">LinkedIn</a>
-       <a class="footer-link" href="https://twitter.com/">Twitter</a>
+       <a class="footer-link" href="https://www.linkedin.com/in/imtranurrahman">LinkedIn</a>
+       <a class="footer-link" href="https://twitter.com/imtranur">Twitter</a>
        <a class="footer-link" href="https://www.appbrewery.co/">Website</a>
-       <p class="copyright">© 2020 Michael Spence.</p>
+       <p class="copyright">© 2020 Imtranur Rahman.</p>
      </div>
   </body>
 </html>
