--- a/index.html
+++ b/index.html
@@ -11,16 +11,19 @@
      <div class="top-container">
        <img class="top-cloud" src="images/cloud.png" alt="cloud-img">
        <h1>I'm Rahman.</h1>
+<!--
        <h2>a <span class="pro">pro</span>grammer</h2>
+-->
+       <h2>a <span class="pro">bui</span>lder</h2>
        <img class="bottom-cloud" src="images/cloud.png" alt="cloud-img">
        <img src="images/mountain.png" alt="mount-img">
      </div>
 
      <div class="middle-container">
        <div class="profile">
-         <img src="images/rahman.jpeg" alt="Imtranur Rahman">
+         <img src="images/rahman1.jpeg" alt="Imtranur Rahman">
          <h2>Hello.</h2>
-         <p class="intro">I am Senior Solutions Architect at AWS <a href="https://mycloudyworld.spikebiz.com">SpikeBiz, Inc.</a>I'm focused on helping partners within Amazon Web Services (AWS) to build their cloud strategy and help them with broad use of Amazon's cloud computing platform.I enjoy working on microservices based applications, hybrid application solutions, application modernization and innovating on behalf of my customers and Partners. Outside of work, he loves playing cricket and soccer.</p>
+         <p class="intro">I am Senior Solutions Architect at <a href="https://aws.amazon.com/">Amazon Web Services</a>I'm focused on helping partners within Amazon Web Services (AWS) to build their cloud strategy and help them with broad use of Amazon's cloud computing platform.I enjoy working on microservices based applications, hybrid application solutions, application modernization and innovating on behalf of my customers and Partners. Outside of work, he loves playing cricket and soccer.</p>
        </div>
        <hr>
        <div class="skills">
